--- a/manager/templates/Manager/Manager.html
+++ b/manager/templates/Manager/Manager.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block manager %}
 <div class='grid grid-cols-7 h-screen '>
-    <div class='col-span-2 p-2 bg-slate-800 m-2 rounded-lg'>
-        <div class='p-2 m-2 bg-yellow-700 text-slate-800 text-left rounded-lg border border-yellow-100'>
+    <div class='col-span-2 p-2 bg-slate-800 m-2 rounded-lg text-lg font-mono font-bold text-left'>
+        <div id='posts' class='p-2 m-2 bg-yellow-500 text-slate-800  rounded-lg border border-yellow-100'>
             Posts
         </div>
-        <div class='p-2 m-2 bg-yellow-700 text-slate-800 text-left rounded-lg border border-yellow-100'>
+        <div id='cartlist' class='p-2 m-2 bg-yellow-500 text-slate-800  rounded-lg border border-yellow-100'>
             Cart List
         </div>
-        <div class='p-2 m-2 bg-yellow-700 text-slate-800 text-left rounded-lg border border-yellow-100'>
+        <div id='userslist' class='p-2 m-2 bg-yellow-500 text-slate-800  rounded-lg border border-yellow-100'>
             Users List
         </div>
-        <div class='p-2 m-2 bg-yellow-700 text-slate-800 text-left rounded-lg border border-yellow-100'>
+        <div id='orderlist' class='p-2 m-2 bg-yellow-500 text-slate-800  rounded-lg border border-yellow-100'>
             Order List
         </div>
     </div>
