--- a/manager/templates/Manager/User.html
+++ b/manager/templates/Manager/User.html
@@ -1,7 +1,33 @@
-<div>
-    
-    {% for user in users %}
-        {{user.id}}
-    {% endfor %}
+<div id='usertemplate' class='hidden'>
+    <div class='bg-green-500 p-2 text-lg font-mono font-bold rounded-lg text-center'>Users Details</div>
+    <div class='py-2 my-2'>
+        <table class='bg-blue-100 w-full'>
+            <tr class=' text-center'>
+                <th class='p-6 bg-gray-400 border border-slate-50'>id</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Last Seen</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Username</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>First Name</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Last Name</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Email</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Acive</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Date Joined</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'></th>
+            </tr>
+            {% for i in users %}
+            <tr>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.id}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.last_login}}</td>
+                <td class='p-2 border border-slate- text-slate-800'>{{i.username}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.first_name}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.last_name}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.email}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.is_active}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.date_joined}}</td>
+                <td class='p-2 border border-slate-50 bg-red-500 rounded-lg text-center'>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
         
 </div>
