--- a/manager/templates/Manager/Cart.html
+++ b/manager/templates/Manager/Cart.html
@@ -1,7 +1,23 @@
-<div>
-    
-    {% for cart in cart %}
-        {{cart.id}}
-    {% endfor %}
-        
+<div id='carttemplate' class='hidden'>
+    <div class='bg-green-500 p-2 text-lg font-mono font-bold rounded-lg text-center'>Cart List</div>
+    <div class='py-2 my-2'>
+        <table class='bg-blue-100 w-full'>
+            <tr class=' text-center'>
+                <th class='p-6 bg-gray-400 border border-slate-50'>id</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>UserId</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>VideoId</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Purchased</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Carted Date</th>
+            </tr>
+            {% for i in cart %}
+            <tr>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.id}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.user_id}}</td>
+                <td class='p-2 border border-slate- text-slate-800'>{{i.video_id}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.purchased}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.carted_at}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
 </div>
