--- a/manager/templates/Manager/Posts.html
+++ b/manager/templates/Manager/Posts.html
@@ -11,6 +11,7 @@
                 <th class='p-6 bg-gray-400 border border-slate-50'>InstructorId</th>
                 <th class='p-6 bg-gray-400 border border-slate-50'>Tumbnail</th>
                 <th class='p-6 bg-gray-400 border border-slate-50'>Video</th>
+                <th class='p-6 bg-gray-400 border border-slate-50'>Free Course</th>
                 <th class='p-6 bg-gray-400 border border-slate-50'>Delete</th>
             </tr>
             {% for i in posts %}
@@ -23,6 +24,8 @@
                 <td class='p-2 border border-slate-50 text-slate-800'>{{i.instructor_id}}</td>
                 <td class='p-2 border border-slate-50 text-slate-800'>{{i.thumbnail}}</td>
                 <td class='p-2 border border-slate-50 text-slate-800'>{{i.video}}</td>
+                <td class='p-2 border border-slate-50 text-slate-800'>{{i.free_course}}</td>
+
 
                 
                 <td class='p-2 border border-slate-50 bg-red-500 rounded-lg text-center'>
