--- a/my_bootcamp/templates/ItemUpdate/ItemUpdate.html
+++ b/my_bootcamp/templates/ItemUpdate/ItemUpdate.html
@@ -7,7 +7,7 @@
         <br>
         <div class='h-full w-full'>
             <p>{{form.title}}</p><br>
-            <p>{{form.thumbnail}}</p><br>
+            <p class='hidden'>{{form.thumbnail}}</p><br>
             <p>{{form.price}}</p><br>
             <p>{{form.description}}</p>
             <p class='hidden'>{{form.video}}</p>
