--- a/my_bootcamp/templates/ItemUpdate/ItemUpdate.html
+++ b/my_bootcamp/templates/ItemUpdate/ItemUpdate.html
@@ -9,11 +9,13 @@
             <p>{{form.title}}</p><br>
             <p class='hidden'>{{form.thumbnail}}</p><br>
             <p>{{form.price}}</p><br>
+            {{form.errors}}
             <p>{{form.description}}</p>
             <p class='hidden'>{{form.video}}</p>
             <p class='hidden'>{{form.category}}</p>
             <p>{{form.instructor}}</p>
             <p>{{form.created_at}}</p>
+            <p class='hidden'>{{form.free_course}}</p>
 
         </div>
         <div class='grid grid-cols-3 h-12 my-12 gap-4'>
