--- a/manager/templates/Manager/Manager.html
+++ b/manager/templates/Manager/Manager.html
@@ -15,7 +15,7 @@
             Order List
         </div>
     </div>
-    <div class='col-span-5 text-left p-2 bg-gray-900 m-2 rounded-lg'>
+    <div class='col-span-5 text-left p-2 bg-gray-900 m-2 rounded-lg h-scrreen overflow-y-scroll sup-scrollbar'>
     {% include "Manager/Posts.html" %}
     {% include "Manager/Orders.html" %}
     {% include "Manager/User.html" %}
