--- a/my_bootcamp/templates/PasswordReset/PasswordReset.html
+++ b/my_bootcamp/templates/PasswordReset/PasswordReset.html
@@ -3,7 +3,7 @@
 <div class='flex items-center justify-center text-center text-slate-200 my-4'>
     <form class='py-12 px-4 w-96  bg-gray-800 ' method='POST' action=''>
         {% csrf_token %}
-        <input class='w-full mb-4' type="email" name="email" autocomplete="email" maxlength="254" required id="id_email" placeholder='Your Registered Email'>
+        <input class='w-full mb-4 text-slate-800' type="email" name="email" autocomplete="email" maxlength="254" required id="id_email" placeholder='Your Registered Email'>
         <p class=''>
             
             {% for field in form %}
